homelab/k8s/audiobookshelf/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: audiobookshelf
  labels:
    istio-injection: enabled
